// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decode bulk string 1`] = `
Array [
  "bar",
  7,
]
`;

exports[`decode null 1`] = `
Array [
  null,
  2,
]
`;

exports[`decode simple string 1`] = `
Array [
  "+foo",
  5,
]
`;

exports[`decode stream 1`] = `
Array [
  "+foo",
  "+bar",
  null,
]
`;

exports[`decoding an array with multiple elements works 1`] = `
Array [
  Array [
    null,
    null,
  ],
  4,
]
`;

exports[`decoding an array with type null works 1`] = `
Array [
  Array [
    null,
  ],
  2,
]
`;

exports[`empty string encoded as simple string 1`] = `
"+
"
`;

exports[`encoding an array of null returns expected value 1`] = `
"~
"
`;

exports[`presence of newline switches to bulk string encoding 1`] = `
"$4
foo

"
`;

exports[`strings without newlines encoded as simple strings 1`] = `
"+foo
"
`;

exports[`we can both encode and decode 1`] = `
"+abcd
~
+efgh
"
`;

exports[`we can both encode and decode 2`] = `
Array [
  Array [
    null,
  ],
  14,
]
`;
